[package]
name = "bonfida-macros"
version = "0.3.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
description = "Bonfida-utils macros"
license = "MIT"

[features]
name-service = ["spl-name-service"]

[lib]
proc-macro = true

[dependencies]
solana-program = "<1.17"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
spl-name-service = { version = "0.2", optional = true }
