[package]
name = "bonfida-test-utils"
version = "0.3.0"
authors = ["ellttBen <elliott@bonfida.com>"]
description = "Solana program testing utilities when working with bonfida-utils."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "<1.17"
solana-program-test = "<1.17"
solana-sdk = "<1.17"
spl-token = "3.5.0"
async-trait = "0.1.56"
spl-associated-token-account = "1.1.3"